# metfish

./: .coverage  .gitignore  CODE_QUALITY_ASSESSMENT.md  LICENSE  Legal.txt  Makefile  README.md  TESTING.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_random_model.py  train_structure.slurm
.github/: pull_request_template.md
.github/workflows/: codespell.yml  run_coverage.yml  run_tests.yml  tests.yml
Feng_bash_scripts/CoDNaS_FOXS_RAW_single_conf/: README  SAXS_to_pr.py  batch_download_seq_new.sh  full_clean.sh
PDB70_NERSC/: fixpdb_pr_parallel_v2.bash  parallel_PDB70.slurm
input_csv_split/: split_csv.sh
scripts/: generate_figures.py  preprocess_conformer_pairs.py
scripts/Extract_Pr_CoDNaS/: 1BZF_A.hclusterRMSD.txt  CoD_calc_main.sh  README  SAXS_to_pr.py  batch_download_seq.sh
scripts/PDB70_NERSC/: NMRtestprep.bash  PDBtoSeq.py  PDBtotest_NMR.py  PDBtotest_NMR_no_ref.py  README  Split_NMR_file.py  fixpdb_pr_parallel.bash  fixpdb_pr_parallel_v2.bash  get_full_seq.py  parallel_PDB70.slurm
scripts/evaluate_msa_model/: evaluate_model_with_saxs.py  evaluate_msa_model.ipynb  evaluate_msa_model.py  evaluate_msa_model.sh
scripts/run_ensemble_model/: DEBUG_README.md  debug_train_structure.sh  test_imports.py  train_structure.slurm
scripts/run_msa_model/: run_msa_model.sh
src/metfish/: __init__.py  calc_pr.py  commands.py  diffution_prior.py  preprocess.py  representation_manipulation.py  utils.py
src/metfish/analysis/: model_config.py  processor.py  visualizer.py
src/metfish/msa_model/: config.py  msa_model.py  predict.py  train.py
src/metfish/msa_model/data/: data_modules.py  data_pipeline.py  feature_pipeline.py
src/metfish/msa_model/model/: alphafold.py  alphafold_saxs.py  alphafold_wrapper.py  msa_saxs.py
src/metfish/msa_model/utils/: loss.py
src/metfish/refinement_model/: config.py  generate.py  model_wrapper.py  new_train.py  random_model.py  refinement_model.py  train.py  train_structure.py
src/metfish/refinement_model/model/: saxs_structure.py
tests/: README.md  conftest.py  test_analysis.py  test_commands.py  test_extract_seq.py  test_get_Pr.py  test_integration.py  test_loss.py  test_msa_model.py  test_refinement_model.py  test_utils.py
tests/data/: 3DB7_A.fasta  3M8J_A.fasta  3nir.cif  3nir.fasta  3nir.pr.csv  compare_models.py
