[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metfish"
authors = [
  { name="Andrew Tritt", email="ajtritt@lbl.gov" },
]
description = "A package for managing MetFish LDRD code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "python",
]

dependencies = [
    "matplotlib",
    "scikit-learn",
    "seaborn",
    "scipy",
    "h5py>=3.7",
    "numpy",
    "ipykernel",
    "pandas",
    "yt",
]

dynamic = ["version"]

[project.scripts]
calc-pr = "metfish.commands:get_Pr_cli"
